# procedural-mountain-erosion

./: Cargo.toml
assets/shaders/: erosion.wgsl  height.wgsl  mountain.wgsl  write.wgsl
src/: main.rs  material.rs  settings.rs  textures.rs
src/compute/: mod.rs  node.rs  pipeline.rs  uniforms.rs
src/heights/: erode.rs  mod.rs  noise.rs
