[package]
name = "mountain-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_panorbit_camera = "0.18.2"
bevy-inspector-egui = "0.24.0"
bevy_screen_diagnostics = "0.5.0"
bevy_image_export = { version = "0.10.0", features = [ "exr" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
